--- a/Lab.ipynb
+++ b/Lab.ipynb
@@ -3532,7 +3532,7 @@
     "### Question 23 (Completeness)\n",
     "\n",
     "<div class=\"question-text\">\n",
-    "Based on Figure 1 in the Zen 3 architecture paper, how many parallel miss chains will produce the maximum L1 bandwidth (most loads completed per second)?  What do you think that bandwidth will be?  With that number of miss chains, what will the CPI be?  Remember: Load hits take 4 cycles.\n",
+    "Based on Figure 1 in the Alder Lake architecture paper, how many parallel miss chains will produce the maximum L1 bandwidth (most loads completed per second)?  What do you think that bandwidth will be?  With that number of miss chains, what will the CPI be?  Remember: Load hits take 4 cycles.\n",
     "</div>\n",
     "</div>\n",
     "</div>    "
